# myAgent

./: .env_example  .gitignore  CLAUDE.md  README.md  config.py  pyproject.toml
agents/: __init__.py
agents/pm_agent/: __init__.py  agent.py  prompts.py
demo/: model_customization.py  pm_agent_demo.py  quickstart.py
prompts/: __init__.py  pm.md
tools/: __init__.py  prd.py  search.py  thinking.py
